--- a/gratulujeme.html
+++ b/gratulujeme.html
@@ -52,7 +52,7 @@
     </script>
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-63d87ff5.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-f1fe7634.js">
+		<link rel="modulepreload" href="./_app/immutable/start-4058b2a0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-f71fcd82.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-b6e546a3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-4bfa7427.js">
@@ -61,9 +61,9 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-d4fc842c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-c713c1dd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Transition-adb530ea.js">
-		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-3a266ce0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-5e613011.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-01ef8cbe.js">
+		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-ebd24eb0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-c8e2b732.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-be129cf3.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/gratulujeme/_page.svelte-56428bcd.js">
 	</head>
   <body data-sveltekit-preload-data="hover">
@@ -93,7 +93,7 @@
       <main><div><section class="relative mx-auto py-6 sm:py-10 px-6 max-w-6xl text-blue-web"><div class=""><div class="text-3xl lg:text-4xl text-center">🎉 Gratulujeme k nákupu vstupenek!
     </div>
     <div class="mt-4 text-lg text-center">Najdeš je v mailu nebo na stránce <a href="/vstupenky" class="underline hover:no-underline">vstupenky</a></div>
-    <div class="flex mt-6"><img class="m-auto w-auto lg:max-w-3xl" src="/gifs/funny-celebrate-4.gif"></div>
+    <div class="flex mt-6"><img class="m-auto w-auto lg:max-w-3xl" src="/gifs/funny-celebrate-8.gif"></div>
     <div class="mt-10 text-xl text-center mt-6">Co teď? Poděl se o tu radost s ostatními <a href="https://twitter.com/intent/tweet?text=M%C3%A1m%20l%C3%ADstek%20na%20%40utxoprague%20%F0%9F%8E%89%20Poj%C4%8F%20taky%21%0A%20%23utxo22" class="underline hover:no-underline" target="_blank">tweetem</a></div>
     <div class="text-xl text-center mt-6">Prohlédni si <a href="/program" class="underline hover:no-underline">aktuální program</a></div>
     <div class="text-xl text-center mt-6">Sleduj novinky na <a href="https://twitter.com/utxoprague" class="underline hover:no-underline" target="_blank">Twitteru</a> <i class="fa-brands fa-twitter"></i></div></div></section></div></main></div>
@@ -113,14 +113,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="10u4a6n">
-			import { start } from "./_app/immutable/start-f1fe7634.js";
+		<script type="module" data-sveltekit-hydrate="ou4yrn">
+			import { start } from "./_app/immutable/start-4058b2a0.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="10u4a6n"]').parentNode,
-				version: "1677184328818",
+				target: document.querySelector('[data-sveltekit-hydrate="ou4yrn"]').parentNode,
+				version: "1677221110798",
 				hydrate: {
 					node_ids: [0, 5],
 					data: [null,null],
