--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-63d87ff5.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-456285a5.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-f1fe7634.js">
+		<link rel="modulepreload" href="./_app/immutable/start-4058b2a0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-f71fcd82.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-b6e546a3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-4bfa7427.js">
@@ -62,9 +62,9 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-d4fc842c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-c713c1dd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Transition-adb530ea.js">
-		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-3a266ce0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-5e613011.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-01ef8cbe.js">
+		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-ebd24eb0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-c8e2b732.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-be129cf3.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-50ab02b2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Avatar-f340785b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Link-53db9fe6.js">
@@ -105,10 +105,10 @@
       <main><div>
 
 
-  <section class="relative mx-auto pt-6 sm:pt-10 px-6"><div class="flex flex-wrap gap-1.5 sm:gap-3 text-xs uppercase font-bold text-custom-darkpurple justify-center"><div class="py-1.5 sm:py-2 px-2.5 sm:px-8 rounded-lg shadow border border-solid bg-utxo-gradient border-0 text-white">Hlavní přednášející (13)
+  <section class="relative mx-auto pt-6 sm:pt-10 px-6"><div class="flex flex-wrap gap-1.5 sm:gap-3 text-xs uppercase font-bold text-custom-darkpurple justify-center"><div class="py-1.5 sm:py-2 px-2.5 sm:px-8 rounded-lg shadow border border-solid bg-utxo-gradient border-0 text-white">Hlavní přednášející (14)
           
         </div><div class="py-1.5 sm:py-2 px-2.5 sm:px-8 rounded-lg shadow border border-solid border-custom-darkpurple  hover:bg-custom-darkpurple hover:text-white hover:border-transparent cursor-pointer">Vše
-          (34)
+          (39)
         </div><div class="py-1.5 sm:py-2 px-2.5 sm:px-8 rounded-lg shadow border border-solid border-custom-darkpurple  hover:bg-custom-darkpurple hover:text-white hover:border-transparent cursor-pointer">Základy
           
         </div><div class="py-1.5 sm:py-2 px-2.5 sm:px-8 rounded-lg shadow border border-solid border-custom-darkpurple  hover:bg-custom-darkpurple hover:text-white hover:border-transparent cursor-pointer">Bitcoin
@@ -158,6 +158,25 @@
       🇨🇿</div>
     <div class="mt-1 text-xs text-custom-darkpurple italic"><p>Content creator, nadšenec do krypta</p></div>
     <div class="mt-1 text-xs text-custom-darkpurple italic"><p><a href="https://holkyvkryptu.cz/" class="underline hover:no-underline" target="_blank">Holky v kryptu</a></p></div></div>
+
+
+
+
+
+
+
+
+            </div><div>
+
+
+
+
+<div class="w-44 sm:w-44 text-center pb-4"><a href="/lide/jakub-jedlinsky"><div class="h-44"><div class="flip-card"><div class="flip-card-inner"><div class="flip-card-front bg-cover bg-center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/jakub-jedlinsky-web.jpg)"></div>
+            <div class="flip-card-back bg-cover bg=center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/jakub-jedlinsky-twitter.jpg)"></div></div></div></div></a>
+    <div class="mt-4 text-sm text-custom-darkpurple uppercase font-bold"><a href="/lide/jakub-jedlinsky">Jakub Jedlinský</a>
+      🇨🇿</div>
+    <div class="mt-1 text-xs text-custom-darkpurple italic"><p>Makroekonom a analytik specializující se na modelování tokenomiky</p></div>
+    <div class="mt-1 text-xs text-custom-darkpurple italic"><p>Spoluzakladatel <a href="https://altlift.cz" class="underline hover:no-underline" target="_blank">Altlift.cz</a>, vyučující na <a href="https://kmev.vse.cz/" class="underline hover:no-underline" target="_blank">KMEV VŠE</a></p></div></div>
 
 
 
@@ -385,7 +404,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-sanetrnik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Sanetrník"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-rehacek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Řeháček"></div>
 
 
 
@@ -398,20 +417,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-cepelka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Čepelka"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/frantisek-kudrna-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="František Kudrna"></div>
 
 
 
@@ -437,20 +443,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Zibner"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-skrivan-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Skřivan"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-pour-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Pour"></div>
 
 
 
@@ -476,7 +469,59 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-hotovec-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Hotovec"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-starostova-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza Starostová"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-cepelka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Čepelka"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Černý"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Zibner"></div>
 
 
 
@@ -502,7 +547,137 @@
 
 
 
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/josef-gattermayer-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Josef Gattermayer"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-bok-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Martin Bok"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-lukac-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Lukáč"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tree-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="tree"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-sobotka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Sobotka"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stanislav-simek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Stanislav Šimek"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-hotovec-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Hotovec"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/david-stancel-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="David Stancel"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/hynek-jina-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Hynek Jína"></div>
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/fetyas-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tomáš Kalabis"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-sanetrnik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Sanetrník"></div>
 
 
 
@@ -541,111 +716,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-lukac-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Lukáč"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stanislav-simek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Stanislav Šimek"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Černý"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-starostova-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza Starostová"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-sobotka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Sobotka"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/hynek-jina-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Hynek Jína"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tree-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="tree"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/josef-gattermayer-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Josef Gattermayer"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-rehacek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Řeháček"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-skrivan-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Skřivan"></div>
 
 
 
@@ -716,15 +787,15 @@
 <section class="relative mx-auto py-10 px-6 max-w-7xl"><div class="text-custom-darkpurple"><h2 class="uppercase pt-5 text-center" id="faq">Často kladené dotazy (FAQ)
       </h2>
       <div class="md:columns-2 columns-1 mt-8 h-auto"><div class="mb-5 break-inside-avoid-column text-custom-darkgreen bg-custom-lightgreen rounded-xl px-8 py-6 text-left transition-all box-shadow-light overflow-visible"><div class="mb-4 font-bold">Jak získám vstupenku?</div>
-            <p>TODO</p>
+            <p>První vlna vstupenek bude k dispozici od pondělí 27. dubna 13:00 za 590 Kč (150 vstupenek). Potom se bude cena v předprodeji postupně zvyšovat až na 790 Kč, případně 1000 Kč na místě.</p>
           </div><div class="mb-5 break-inside-avoid-column text-custom-darkgreen bg-custom-lightgreen rounded-xl px-8 py-6 text-left transition-all box-shadow-light overflow-visible"><div class="mb-4 font-bold">Pro koho je konference určena?</div>
             <p>Pro všechny kryptoměnové nadšence. Konference vznikla také jako neutrální místo pro dialog v rámci celé lokální krypto-komunity. Každý něčemu fandíme, ale pojďme se od toho alespoň chvíli odprostit a poslechnout si i myšlenky protistrany, nebo diskutovat.</p>
           </div><div class="mb-5 break-inside-avoid-column text-custom-darkgreen bg-custom-lightgreen rounded-xl px-8 py-6 text-left transition-all box-shadow-light overflow-visible"><div class="mb-4 font-bold">Budou dostupné záznamy přednášek?</div>
-            <p>Ano, všechny přednášky z hlavních 4 sálů (P1-P4) budou po konferenci dostupné zdarma na UTXO.TV nebo našem <a href="https://www.youtube.com/channel/UCXLBCW1pstQPQf-4zRESepA" class="underline hover:no-underline" target="_blank">YouTube kanálu</a>.</p>
+            <p>Ano, přednášky z hlavních sálů budou po konferenci dostupné zdarma na UTXO.TV nebo našem <a href="https://www.youtube.com/channel/UCXLBCW1pstQPQf-4zRESepA" class="underline hover:no-underline" target="_blank">YouTube kanálu</a>.</p>
           </div><div class="mb-5 break-inside-avoid-column text-custom-darkgreen bg-custom-lightgreen rounded-xl px-8 py-6 text-left transition-all box-shadow-light overflow-visible"><div class="mb-4 font-bold">Co to znamená "UTXO"?</div>
             <p>"UTXO" znamená "<em>Unspent transaction output</em>", což by se dalo přeložit jako "neutracený výstup transakce". Jedná se o <a href="https://www.alza.cz/transakcni-poplatky-a-minimalni-velikost-utxo#co-je-utxo" class="underline hover:no-underline" target="_blank">základní mechanismus fungování bitcoinu</a>.</p><blockquote><p>"<em>UTXO je jediný způsob, jakým váš bitcoin skutečně "existuje". Každá transakce bere předchozí neutracené výstupy, používá je jako vstupy a ve výsledku vytváří nové výstupy. Každý konec je novým začátkem. Bitcoin je krásný.</em>" - <a href="https://twitter.com/SatsJoseph/status/1370329486059843588" class="underline hover:no-underline" target="_blank">@SatsJoseph</a></p></blockquote>
           </div><div class="mb-5 break-inside-avoid-column text-custom-darkgreen bg-custom-lightgreen rounded-xl px-8 py-6 text-left transition-all box-shadow-light overflow-visible"><div class="mb-4 font-bold">Budou přednášky vysílané živě?</div>
-            <p>Ano, plánujeme bohatý program i pro návštěvníky online - živé přenosy ze všech přednáškových sálů, rozhovory s návštěvníky a další obsah. Vše bude zdarma dostupné na doméně UTXO.TV (a <a href="https://www.youtube.com/channel/UCXLBCW1pstQPQf-4zRESepA" class="underline hover:no-underline" target="_blank">YouTube</a>).</p>
+            <p>Ano, vše bude zdarma dostupné na doméně UTXO.TV (a <a href="https://www.youtube.com/channel/UCXLBCW1pstQPQf-4zRESepA" class="underline hover:no-underline" target="_blank">YouTube</a>).</p>
           </div></div></div></section></div></main></div>
     <div class="bg-gradient-to-b from-custom-darkpurple to-custom-darkestpurple text-white print:hidden"><div class="relative mx-auto px-6 pt-10 pb-2 sm:pb-6 max-w-7xl sm:flex pr-4"><div class="flex-1"><div><a href="/"><img src="/img/logo.svg" alt="UTXO.23" class="w-32"></a></div>
         <div class="mt-4 font-semibold">3.-4. červen 2023 @ Gabriel Loci, Praha
@@ -742,14 +813,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1319djq">
-			import { start } from "./_app/immutable/start-f1fe7634.js";
+		<script type="module" data-sveltekit-hydrate="l1hou7">
+			import { start } from "./_app/immutable/start-4058b2a0.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1319djq"]').parentNode,
-				version: "1677184328818",
+				target: document.querySelector('[data-sveltekit-hydrate="l1hou7"]').parentNode,
+				version: "1677221110798",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
